Bug 1673199 - Make MediaList objects return a style sheet parent so that we associate reflectors to the right global. r=smaug, a=pascalc

Otherwise if devtools or other privileged JS access them then content
can choke.

Differential Revision: https://phabricator.services.mozilla.com/D95121