layout/style/MediaList.h
@@ -40,7 +40,7 @@ class MediaList final : public nsISupports, public nsWrapperCache {
   already_AddRefed<MediaList> Clone();
 
   JSObject* WrapObject(JSContext* aCx, JS::Handle<JSObject*> aGivenProto) final;
-  nsISupports* GetParentObject() const { return nullptr; }
+  nsISupports* GetParentObject() const;
 
   void GetText(nsAString& aMediaText);
   void SetText(const nsAString& aMediaText);
